	  a new apps/tools/mkconfig.bat script is generated (2015-08-11).
	* apps/tools/mkkconfig.bat:  Add the Windows script corresponding to
	  apps/tools/mkkconfig.sh.  Needed for a Windows native build.  Untested
	  on initial commit (2015-08-12).

7.12 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/can:  Extend the CAN loopback test by adding more
	  command line options (2015-08-17).
	* apps/examples/usbserial: Can now be run as an NSH builtin-function.
	  Now uses a configurable IO buffer size (2015-08-20).
	* Various Kconfig files in netutils:  Fix some changes from from
	  NETUTILS_DNSCLIENT to NETDB_DNSCLIENT.  From Pavel Pisa (2015-08-20).
	* system/netdb:  Failed to build if CONFIG_NET_HOSTFILE was not defined
	  because gethostbyaddr() was not available.  Noted by OrbitalFox
	  (2015-08-21).
	* apps/system/symtab: Optional canned symtab inclusion to the build. When
	  option CONFIG_SYSTEM_SYMTAB is selected and symbol table file
	  libc/symtab/canned_symtab.inc is prepared then application can
	  use system provided complete symbol table. The option has
	  substantial effect on system image size. Mainly code/text. If
	  loading of applications at runtime is not planned do not select
	  this.  From Pavel Pisa (2015-08-23).
	* apps/nettest: Add option to suppress network initialization.  This
	  is necessary if the nettest is run from NSH which has already
	  initialized the network (2015-08-26).
	* apps/nettest: Extend test so that can be performed using the local
	  loopback device (2015-08-26).
	* apps/nshlib: Fix error handling in 'cat' command.  On a failure to
	  allocate memory, a file was not being closed.  From Bruno Herrera
	  (2015-08-26).
	* apps/nshlib: Fix error handling in 'mv' command.  On a failure to
	  expand the second path, the memory allocated for the expansion of the
	  first path was not being freed.  From Bruno Herrera (2015-08-26).
	* apps/examples/netloop:  Add a test of the local loopback device
	  (2015-09-02).
