@@ -33,7 +33,8 @@
 #define __APPS_MODBUS_ASCII_MBASCII_H
 
 #ifdef __cplusplus
-PR_BEGIN_EXTERN_C
+extern "C"
+{
 #endif
 
 /****************************************************************************
@@ -55,7 +56,7 @@ bool xMBASCIITimerT1SExpired(void);
 #endif
 
 #ifdef __cplusplus
-PR_END_EXTERN_C
+}
 #endif
 
 #endif /* __APPS_MODBUS_ASCII_MBASCII_H */
